fix layout bugs

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,7 @@
 }
 
 .app-header {
-  position: absolute;
+  position: sticky;
   top: 0;
   bottom: 0;
   left: 0;
@@ -23,9 +23,6 @@
   .app-content {
     overflow-y: scroll;
     overflow-x: hidden;
-  }
-  .app-footer {
-    display: none;
   }
 }
 
