--- a/src/app/info-content/legal-notice/legal-notice.component.scss
+++ b/src/app/info-content/legal-notice/legal-notice.component.scss
@@ -12,16 +12,16 @@
         color: white;
         padding-top: 32px;
         padding-right: 64px;
-    
+
         .lang {
             cursor: pointer;
         }
-    
+
         .separator {
             height: 16px;
             border-right: 3px solid white !important;
         }
-    
+
         .active {
             color: $bg-green;
         }
@@ -32,7 +32,6 @@
         width: $c-last-width;
         overflow-y: scroll;
         color: white;
-        margin-left: var(--h-width);
         padding: 80px;
 
         h1 {
@@ -63,6 +62,7 @@
         .language-toggle {
             padding-top: 110px;
         }
+
         .content {
             margin: 0 0 $h-height 0;
             padding: 24px;
