--- a/src/app/info-content/privacy-policy/privacy-policy.component.scss
+++ b/src/app/info-content/privacy-policy/privacy-policy.component.scss
@@ -39,7 +39,6 @@ h1, h2, h3, h4, h5, h6, p, strong, em, a, span, div, li, ul, ol, table td {
         height: 100vh;
         overflow-y: scroll;
         color: white;
-        margin-left: var(--h-width);
         padding: $pad;
         padding: $pad;
 
