--- a/src/app/info-project/project-card/project-card.component.scss
+++ b/src/app/info-project/project-card/project-card.component.scss
@@ -68,7 +68,6 @@
 @media (max-width: 1200px) {
     .body {
         .info {
-            flex-direction: column;
             gap: 0;
             .screenshot-container {
                 width: 100%;
