--- a/src/app/main-content/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content/main-content.component.scss
@@ -5,9 +5,6 @@
   display: flex;
   flex-direction: row;
   height: 100vh;
-  margin-left: var(--h-width);
-
-  
 }
 
 .main-content > * {
